various routes added and html pages set up

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,1 +1,22 @@
-home html
+<html>
+
+<head>
+  <title>
+    FriendFinder
+  </title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+  <div class="jumbotron">
+    <h1>FriendFinder</h1>
+    <p>Answer the ten questions and make a friend today!</p>
+    <p><a class="btn btn-primary btn-lg" href="/survey" role="button">Take Survey</a></p>
+  </div>
+  <a href="/api/friends">API Friends List</a>
+  <a href="https://github.com/wood2jp2/FriendFinder/tree/master/app">GitHub Repo</a>
+</body>
+
+</html>
