api and html routing set

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,8 +9,111 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
-<body>
 
+<body>
+  <h1>Survey Questions</h1>
+  <div class="input-group">
+    <h2>About You</h2>
+    <h3>Name (required)</h3>
+    <input type="text" class="form-control" placeholder="Your Name" aria-describedby="sizing-addon1">
+    <h3>Link to Photo Image (required)</h3>
+    <input type="text" class="form-control" aria-describedby="sizing-addon1">
+  </div>
+  <div id='questions'>
+    <h3>Question 1</h3>
+    <h4>On a friday night, you are more inclined to hit up a new Netflix series than hit up the bars</h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+
+    <h3>Question 2</h3>
+    <h4>You think that Star Wars is the greatest movie series of all time.</h4>
+
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 3</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 4</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 5</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 6</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 7</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 8</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 9</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+    <h3>Question 10</h3>
+    <h4></h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
+  </div>
+  </div>
 </body>
 
 </html>
