done thru step 4

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,8 +5,7 @@
     FriendFinder
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -17,6 +16,12 @@
   </div>
   <a href="/api/friends">API Friends List</a>
   <a href="https://github.com/wood2jp2/FriendFinder/tree/master/app">GitHub Repo</a>
+  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- <script src="../routing/apiRoutes.js"></script>
+  <script src="../routing/htmlRoutes.js"></script>
+  <script src="../server.js"></script> -->
 </body>
 
 </html>
