--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -5,8 +5,7 @@
     FriendFinder
   </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </head>
 
 
@@ -15,9 +14,9 @@
   <div class="input-group">
     <h2>About You</h2>
     <h3>Name (required)</h3>
-    <input type="text" class="form-control" placeholder="Your Name" aria-describedby="sizing-addon1">
+    <input id='name' type="text" class="form-control" placeholder="Your Name" aria-describedby="sizing-addon1">
     <h3>Link to Photo Image (required)</h3>
-    <input type="text" class="form-control" aria-describedby="sizing-addon1">
+    <input id='pic' type="text" class="form-control" aria-describedby="sizing-addon1">
   </div>
   <div id='questions'>
     <h3>Question 1</h3>
@@ -32,16 +31,16 @@
 
     <h3>Question 2</h3>
     <h4>You think that Star Wars is the greatest movie series of all time.</h4>
+    <select>
+        <option value="1">1 (Strongly Disagree)</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5 (Strongly Agree)</option>
+      </select>
 
-    <select>
-        <option value="1">1 (Strongly Disagree)</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5 (Strongly Agree)</option>
-      </select>
     <h3>Question 3</h3>
-    <h4></h4>
+    <h4>Pizza is the way to your heart.</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -49,8 +48,9 @@
         <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
+
     <h3>Question 4</h3>
-    <h4></h4>
+    <h4>You've watched every single Game of Thrones episode to date.</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -58,8 +58,9 @@
         <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
+
     <h3>Question 5</h3>
-    <h4></h4>
+    <h4>During football season, you have to be part of AT LEAST two fantasy football leagues.</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -67,8 +68,9 @@
         <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
+
     <h3>Question 6</h3>
-    <h4></h4>
+    <h4>You like to see yourself as a 'morning person'</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -76,8 +78,9 @@
         <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
+
     <h3>Question 7</h3>
-    <h4></h4>
+    <h4>You like to travel</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -86,7 +89,7 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
     <h3>Question 8</h3>
-    <h4></h4>
+    <h4>8</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -95,7 +98,7 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
     <h3>Question 9</h3>
-    <h4></h4>
+    <h4>9</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -104,7 +107,7 @@
         <option value="5">5 (Strongly Agree)</option>
       </select>
     <h3>Question 10</h3>
-    <h4></h4>
+    <h4>10</h4>
     <select>
         <option value="1">1 (Strongly Disagree)</option>
         <option value="2">2</option>
@@ -112,8 +115,29 @@
         <option value="4">4</option>
         <option value="5">5 (Strongly Agree)</option>
       </select>
+
+    <button id='submitButton'>Submit</button>
   </div>
-  </div>
+  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- <script src="../routing/apiRoutes.js"></script>
+  <script src="../routing/htmlRoutes.js"></script>
+  <script src="../server.js"></script> -->
+  <script type="text/javascript">
+    $('#submitButton').on('click', function() {
+
+      var friendName = $('#name').val().trim();
+      var friendPic = $('#pic').val().trim();
+      var newFriend = {
+        name: friendName,
+        photo: friendPic,
+        scores: []
+      };
+      console.log('new friend added.');
+    });
+  </script>
 </body>
+
 
 </html>
