--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -119,11 +119,9 @@
     <button id='submitButton'>Submit</button>
   </div>
   <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- <script src="../routing/apiRoutes.js"></script>
-  <script src="../routing/htmlRoutes.js"></script>
-  <script src="../server.js"></script> -->
+
   <script type="text/javascript">
     $('#submitButton').on('click', function() {
 
