modal and heroku left

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -142,22 +142,21 @@
       };
 
       function addTheFriend() {
-        var question = $('#q1');
-
         for (let i = 1; i <= 10; i++) {
           var question = $(`#q${i}`).val();
           newFriend.scores.push(question);
         };
         console.log(newFriend);
+        var currentURL = window.location.origin;
+
+        $.post(currentURL + '/api/friends', newFriend, function(data) {
+          console.log('working');
+        })
       };
 
       validateData();
 
-      var currentURL = window.location.origin;
 
-      $.post(currentURL + '/api/friends', newFriend, function(data) {
-        alert('working');
-      })
 
     });
   </script>
